fix alignment

--- a/global.css
+++ b/global.css
@@ -47,6 +47,7 @@ a {
   font-style: italic;
   font-size: 4em;
   font-weight: 500;
+  margin-top: 0px;
 }
 
 .page h2 {
